fix margins on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -123,8 +123,8 @@ ul>li {
     border-left: none;
   }
 
-  ul {
-    margin-left: 100px;
+  .home-body>ul {
+    margin-left: 75px;
   }
 }
 
